# FilmSeeker

./: .gitignore  README.md  pyproject.toml  start.sh
film_seeker/: app_styles.py  info_texts.py  main.py  sakila_models.py  test.py
